--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
-    "next": "14.2.3",
+    "next": "^13.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   }
