--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^6.16.0",
     "sass": "^1.77.1"
   }
 }
