--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "next": "^13.2.4",
