--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "build:css": "sass assets/css/main.scss assets/css/main.css --style expanded",
     "minify:css": "sass assets/css/main.scss assets/css/main.min.css --style compressed",
     "build": "next build && npm run build:css && npm run minify:css",
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"node server.js\"",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "body-parser": "^1.20.3",
+    "concurrently": "^9.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "express": "^4.21.0",
     "next": "^13.2.4",
+    "nodemailer": "^6.9.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-simple-typewriter": "^5.0.1",
