--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "next": "^13.2.4",
+    "nodemailer": "^6.9.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-simple-typewriter": "^5.0.1",
